# autohack-next

./: .gitignore  MANIFEST.in  README.md  TODO.md  autoHack-next.code-workspace  autohack-next.code-workspace  get_executable_version.py  main.py  pyproject.toml
.github/: dependabot.yml
.github/actions/build-python-package.yml/: action.yml
.github/actions/install-upx/: action.yml
.github/actions/prepare-python-env/: action.yml
.github/workflows/: build-executable.yml  build-python-package.yml  build.yml  commit.yml  release.yml
autohack/: __init__.py  __main__.py  central.py
autohack/core/: checker.py  constant.py  exception.py  path.py  run.py  util.py
autohack/i18n/: empty.json  en_US.json
autohack/lib/: i18n.py  logger.py
docs/: CHANGELOG.json  README_zh.md  i18n.md  i18n_summary.md
scripts/: benchmark_ansi.py  build.ps1
src/autohack/: __init__.py  __main__.py  checker.py  compat.py  compile_translations.py  config.py  constant.py  constants.py  exception.py  function.py  i18n.py  logger.py  main.py  scripts.py  test_i18n.py  util.py
src/autohack/backend/: __init__.py  server.py
src/autohack/core/: checker.py  constant.py  exception.py  path.py  run.py  util.py
src/autohack/frontend/: __init__.py  client.py
src/autohack/i18n/: en_US.json  zh_CN.json
src/autohack/lib/: config.py  i18n.py  logger.py
src/autohack/locale/: autohack.pot
src/autohack/locale/en_US/LC_MESSAGES/: autohack.mo  autohack.po
src/autohack/locale/zh_CN/LC_MESSAGES/: autohack.mo  autohack.po
