[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "autohack-next"
dynamic = ["version"]
description = " highly customizable competitive programming Hack tool written in Python."
readme = "README.md"
requires-python = ">=3.10"
license-files = ["COPYING"]
authors = [
    {name = "gi-b716", email = "sganyunchi@163.com"}
]
keywords = ["competitive-programming", "hack", "automation"]
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
]
dependencies = [
    "colorama>=0.4.6",
    "json5>=0.12.1",
    "platformdirs>=4.5.0",
    "psutil>=7.1.0",
    "readchar>=4.2.1",
]

[tool.setuptools.dynamic]
version = {attr = "autohack.__version__"}

[project.urls]
Homepage = "https://github.com/gi-b716/autohack-next"
Documentation = "https://github.com/gi-b716/autohack-next/blob/main/README.md"
Repository = "https://github.com/gi-b716/autohack-next.git"
"Bug Tracker" = "https://github.com/gi-b716/autohack-next/issues"

[project.scripts]
autohack = "autohack.scripts:entrypoint"

[project.optional-dependencies]
build = [
    "build>=1.3.0",
    "nuitka>=2.7.12",
    "twine>=6.1.0"
]
